docs/versioned_docs/version-0.0.1/community.md
---
sidebar_position: 6
---

# Community and Talks

Join the Telegram group [here](https://t.me/zkmopro). This is the main place where coordination around development takes places.

## Talks

- Talk by @vivianjeng at [IC3 Camp 2024](https://www.initc3.org/events/2024-06-10-ic3-blockchain-camp-2024) (New York City, June 2024): [Slides](https://docs.google.com/presentation/d/1UoHA2C-SB7qmmIcKBA8if5pCtzU4AbdnH0EX59TQcoE/edit?usp=sharing) (no video)
- Talk by @vivianjeng at [Signature Singularity Residency](https://sigsing.com/) (Osaka, May 2024): [Video](https://www.youtube.com/live/rT7zLiOYX8s?si=Hy3cxL1Kg8xxX7Ti&t=5260), [Slides](https://docs.google.com/presentation/d/1r4hqV7jPTYf2WjtAzah-w9r5LKbf_-Se9t0HPWCLAs4/edit?usp=sharing)
- Talk by @oskarth at [ZK Summit 11](https://www.zksummit.com/) (Athens, April 2024): [Video](https://www.youtube.com/watch?v=06CLMAuEXE4), [Slides](https://hackmd.io/TNZCDbu-T9e6lx8_Wft5ww?view).
- Workshop by @oskarth and @vivianjeng at ZK Day (Taipei, March 2024): [Video](https://www.youtube.com/watch?v=K-h7blwnXbQ).
- Talk by @oskarth at [ETHTaipei](https://ethtaipei.org/) (Taipei, March 2024): [Slides](https://hackmd.io/@oskarth/S1yGjF8C6#), [Video](https://www.youtube.com/live/JB6zP9enkbc?si=04xz9XRLkChNiupw&t=14708)
- Talk by @oskarth at [ProgCrypto/Devconnect](https://progcrypto.org/) (Istanbul, November 2023): [Slides](https://docs.google.com/presentation/d/1afIEgm8oYRvteWxUd04CcMOxChAiHaD55d5AKd0RkvY/edit#slide=id.g284ac8f47d5_2_24) (no video)


## Contribute

Contributions of all kinds are welcome! Please see [open GH issues](https://github.com/zkmopro/mopro/issues). Also feel free to join the Telegram chat.

You can also check out [good first issues](https://github.com/zkmopro/mopro/issues?q=is%3Aissue+is%3Aopen+label%3A%22good+first+issue%22).

## Acknowledgements

This work was initially sponsored by a joint grant from [PSE](https://pse.dev/) and [0xPARC](https://0xparc.org/). It is currently incubated by PSE.